--- a/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.css
+++ b/Web Fundamentals - HTML5/10. Creating Landing Pages/01. Consulting Agency/consulting-agency.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600');
+
 * {
   margin: 0;
   padding: 0;
@@ -76,6 +77,7 @@ header button:hover {
   color: #BA925E;
 }
 
+/* industries */
 
 .industries h2 {
   font-size: 3.5rem;
@@ -117,11 +119,92 @@ header button:hover {
   border-radius: 50%;
 }
 
+/* mid banner */
+
 .mid-banner {
   text-align: center;
-  padding: 30px 0;
-  background: url('images/steel-bg.jpg')
-
-  /* todo opactity */
+  margin-bottom: 0;
+  padding-top: 35px;
+  padding-bottom: 46px;
+  margin-top: 40px;
+  display: block;
+  position: relative;
 }
 
+.mid-banner::after {
+  content: '';
+  background-size: cover;
+  opacity: 0.3;
+  background: url('images/steel-bg.jpg') center center;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.mid-banner h4 {
+  font-size: 2rem;
+  margin: 0 auto;
+  width: 30%;
+}
+
+.mid-banner h4::first-line {
+  color: #BA925E;
+}
+
+/* traders */
+
+.traders {
+  margin: 0;
+  padding-top: 35px;
+  padding-bottom: 46px;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('images/background-choose-us.jpg') no-repeat center;
+  background-size: cover;
+}
+
+.traders h2 {
+  text-align: center;
+  font-size: 40px;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.article-container {
+  display: flex;
+  justify-content: center;
+}
+
+.article-container a {
+  margin-right: 30px;
+  padding: 20px;
+  width: 300px;
+  border: 2px solid #c79d63;
+  text-align: center;
+  text-decoration: none;
+}
+
+.article-container a:hover,
+.article-container a:hover p,
+.article-container a:hover h4 {
+  background: #fff;
+  color: #090821;
+}
+
+.article-container h4 {
+  color: #fff;
+  margin: 0 0 17px 17px;
+  padding-top: 21px;
+  letter-spacing: 0;
+  font-size: 20px;
+}
+
+.article-container p {
+  text-align: left;
+  margin: 0 0 17px 17px;
+  font-size: 13px;
+  line-height: 18px;
+  color: #ffffff;
+}
